--- a/package.json
+++ b/package.json
@@ -57,9 +57,9 @@
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^4.0.0",
     "@google/generative-ai": "^0.24.0",
-    "@iconify/vue": "^4.3.0",
     "@modelcontextprotocol/sdk": "^1.9.0",
     "@radix-icons/vue": "^1.0.0",
+    "@types/uuid": "^10.0.0",
     "@types/xlsx": "^0.0.35",
     "@uiw/codemirror-themes": "^4.23.8",
     "@unovis/ts": "^1.5.0",
@@ -116,7 +116,7 @@
     "tokenx": "^0.4.1",
     "turndown": "^7.2.0",
     "undici": "^7.4.0",
-    "uuid": "^11.0.5",
+    "uuid": "^11.1.0",
     "v-calendar": "^3.1.2",
     "vaul-vue": "^0.2.0",
     "vee-validate": "^4.15.0",
@@ -134,8 +134,9 @@
     "@electron-toolkit/eslint-config-ts": "^2.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/notarize": "^2.5.0",
-    "@iconify-json/lucide": "^1.2.26",
+    "@iconify-json/lucide": "^1.2.35",
     "@iconify-json/vscode-icons": "^1.2.16",
+    "@iconify/vue": "^4.3.0",
     "@rushstack/eslint-patch": "^1.10.3",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.0.4",
